Fix author tooltip wrapping

--- a/less/forum/index.less
+++ b/less/forum/index.less
@@ -178,12 +178,8 @@
     float: left;
     margin-top: 19px;
   }
-  & > .tooltip {
-    white-space: nowrap;
-
-    & .tooltip-inner {
-      max-width: none;
-    }
+  & .tooltip .tooltip-inner {
+    max-width: none;
   }
   & .badges {
     float: left;
